[package]
name = "guessing_game"
version = "0.1.0"
authors = ["jmstudyacc <jmstudyacc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# dependencies are downloaded from the Rust registry, Crate.io, where open source Rust projects live
[dependencies]
rand ="0.5.5"   # leveraging Semantic Versioning, SemVer is a standard for writing version numbers
                # this is actually shorthand for ^0.5.5 meaning any version that has a public API compatible with 0.5.5

# you can run 'cargo update' to update the version in Cargo.lock to the latest 0.5.X train
# if you wanted to go to 0.6.0 you would need to change this file to reflect the desired version